# https://pypi.org/project/setupcfg-generator/
[metadata]
name = list-imports
version = 2019.3.22
url = https://github.com/looking-for-a-job/list-imports.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = imports

[options]
install_requires = 
	click
	public
	setuptools
packages = 
	list_imports
